--- a/index..html
+++ b/index..html
@@ -332,7 +332,53 @@
                     </h2>
                 </div>
             </div>
+            <div class="back-button">Back</div>
 
+        </section>
+        <section class="exercise-container">
+            <div class="exercise-container__north">
+                <h2 class="exercise-container__north-text text">
+                    Start exploring the northern constellations
+                </h2>
+            </div>
+            <div class="exercise-container__zodiac">
+                <h2 class="exercise-container__zodiac-text text">
+                    Start learning the zodiac constellations
+                </h2>
+                <div class="exercise-container__loop">
+                </div>
+            </div>
+            <div class="exercise-container__south">
+                <h2 class="exercise-container__south-text text">
+                    Start exploring the southern constellations
+                </h2>
+            </div>
+            <div class="back-button">Back</div>
+        </section>
+        <section class="quiz-container">
+            <div class="quiz-container__top">
+                <div class="quiz-container__left">
+                    <h2 class="quiz-container__left-text text">
+                        North Quiz
+                    </h2>
+                </div>
+                <div class="quiz-container__center">
+                    <h2 class="quiz-container__center-text text">
+                        Zodiac Quiz
+                    </h2>
+                </div>
+                <div class="quiz-container__right">
+                    <h2 class="quiz-container__right-text text">
+                        South Quiz
+                    </h2>
+                </div>
+            </div>
+            <div class="quiz-container__bottom">
+                <h2 class="quiz-container__bottom-text text">
+                    All 88 Constellations
+                </h2>
+            </div>
+            <div class="back-button">Back</div>
         </section>
     </div>
 
