--- a/index..html
+++ b/index..html
@@ -336,7 +336,7 @@
 
         </section>
         <section class="exercise-container">
-            <div class="exercise-container__north">
+            <!-- <div class="exercise-container__north">
                 <h2 class="exercise-container__north-text text">
                     Start exploring the northern constellations
                 </h2>
@@ -352,8 +352,12 @@
                 <h2 class="exercise-container__south-text text">
                     Start exploring the southern constellations
                 </h2>
-            </div>
+            </div> -->
+            <section class="exercise-block">
+            </section>
+
             <div class="back-button">Back</div>
+
         </section>
         <section class="quiz-container">
             <div class="quiz-container__top">
@@ -386,6 +390,7 @@
 
 
     <script src="./script.js"></script>
+    <script src="./catalog.js"></script>
 </body>
 
 </html>
