--- a/index..html
+++ b/index..html
@@ -336,23 +336,23 @@
 
         </section>
         <section class="exercise-container">
-            <!-- <div class="exercise-container__north">
-                <h2 class="exercise-container__north-text text">
+            <div class="exercise-container__north">
+                <h2 class="exercise-container__north-text text exerciseButton">
                     Start exploring the northern constellations
                 </h2>
             </div>
             <div class="exercise-container__zodiac">
-                <h2 class="exercise-container__zodiac-text text">
+                <h2 class="exercise-container__zodiac-text text exerciseButton">
                     Start learning the zodiac constellations
                 </h2>
                 <div class="exercise-container__loop">
                 </div>
             </div>
             <div class="exercise-container__south">
-                <h2 class="exercise-container__south-text text">
+                <h2 class="exercise-container__south-text text exerciseButton">
                     Start exploring the southern constellations
                 </h2>
-            </div> -->
+            </div>
             <section class="exercise-block">
             </section>
 
@@ -388,9 +388,8 @@
 
 
 
-
-    <script src="./script.js"></script>
     <script src="./catalog.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
