--- a/index..html
+++ b/index..html
@@ -14,8 +14,8 @@
         <div class="start-container">
             <h1 class="start-container__title">Welcome to the constellation guide</h1>
             <div class="start-container__authentication">
-                <h2 class="start-container__signin">SignIn</h2>
-                <h2 class="start-container__signup">SignUp</h2>
+                <h2 class="start-container__signin">Sign In</h2>
+                <h2 class="start-container__signup">Sign Up</h2>
             </div>
         </div>
         <main class="main-container">
@@ -26,313 +26,24 @@
 
                 <div class="main-container__option first">Catalog</div>
                 <div class="main-container__option second">Quiz</div>
-                <div class="main-container__option third">Exercise</div>
+                <div class="main-container__option third">Study</div>
             </div>
         </main>
         <section class="catalog-container">
             <aside class="catalog-container__aside">
-                <ul>
+                <ul id="list">
                     <h2 class="catalog-container__title">Catalog:</h2>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
-                    <li>
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <div class="catalog-container__image">
-                            <img src="./source/test.png" alt="">
-                        </div>
-                    </li>
 
                 </ul>
 
             </aside>
             <div class="catalog-container__main">
                 <div class="catalog-container__big-image">
-                    <img src="./source/1619734157_1-phonoteka_org-p-sozvezdiya-bez-fona-1.png" alt="">
+                    <div class="catalog-container__wrapper">
+
+                    </div>
                 </div>
                 <div class="catalog-container__bottom">
-                    <h2>
-                        Some Important information
-                    </h2>
                 </div>
             </div>
             <div class="back-button">Back</div>
@@ -387,16 +98,19 @@
             </div>
             <section class="quiz-block">
 
+
             </section>
             <div class="back-button">Back</div>
         </section>
     </div>
 
 
+    <script src="./scripts/fetch.js"></script>
     <script src="./scripts/catalog.js"></script>
     <script src="./scripts/quiz.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/authentication.js"></script>
+    <script src="./scripts/study.js"></script>
 
 
 </body>
